# slack-mcp

./: .mcp.json  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/agents/domain-experts/: python-expert.md
.serena/: project.yml
.serena/memories/: mcp-testing-guide.md  test-channels.md
context/spec/001-channel-management/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-token-selection/: functional-spec.md  tasks.md  technical-considerations.md
src/slack_mcp_server/: __init__.py  cli.py  provider.py  server.py  text_utils.py
