[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp-server"
version = "1.0.0"
description = "A powerful MCP server for Slack workspaces - supports DMs, Group DMs, smart history fetch, and works via OAuth or browser tokens"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Korotovsky", email = "korotovsky@users.noreply.github.com" }
]
keywords = ["mcp", "slack", "llm", "ai", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "slack-sdk>=3.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
]

[project.scripts]
slack-mcp-server = "slack_mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# I = isort rules (import sorting)

[tool.ruff.lint.isort]
known-first-party = ["slack_mcp_server"]